--- a/layouts/default.html
+++ b/layouts/default.html
@@ -90,8 +90,8 @@
 							<li class="nav-header">Other Sponsors</li>
                             <% sponsors.select{|s| not s.cornerstone?}.each do |s| %>
 							<a href="<%= relpath(@item_rep.path, s.path) %>">
-                                <% if s.logo? %>
-								<img src="<%= relpath(@item_rep.path, s.logo) %>" alt="<%= s.name %>" title="<%= s.name %>"/>
+                                <% if s.thumb? %>
+								<img src="<%= relpath(@item_rep.path, s.thumb) %>" alt="<%= s.name %>" title="<%= s.name %>"/>
                                 <% else %>
                                 <%= s.name %>
                                 <% end %>
