enhance sponsors table

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -25,6 +25,12 @@
             #infoblock {
                 background: inherit;
             }
+            table#sponsors td {
+                vertical-align: top;
+            }
+            table#sponsors img {
+                padding-left: 2em;
+            }
 		</style>
 	</head>
 	<body>
