--- a/content/assets/style/fosdem.css
+++ b/content/assets/style/fosdem.css
@@ -1,3 +1,1 @@
-<% @items.select{|i| i.identifier =~ %r{^/assets/style/parts/.+/$}}.each do |css| %>
-<%= css.compiled_content %>
-<% end %>
+<% @items.select{|i| i.identifier =~ %r{^/assets/style/parts/.+/$}}.sort_by{|i| i.identifier}.each do |css| %><%= css.compiled_content %><% end %>
