--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,11 +7,11 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link type="text/css" rel="stylesheet" media="screen" href="<%= $item_by_id['/assets/style/fosdem/'].path %>"/>
-        <link href="<%= $item_by_id['/atom/'].path %>" type="application/atom+xml" rel="alternate" title="FOSDEM ATOM Feed"/>
+        <link href="<%= $item_by_id['/atom/'].path %>" type="application/atom+xml" rel="alternate" title="<%= conference()[:title] %> ATOM Feed"/>
         <% (@item[:alternative_representations] or []).each do |alt| %>
         <link type="<%= alt[:mime] %>" rel="alternate" title="<%= alt[:title] %>" href="<%= $item_by_id[alt[:item]].path %>" />
         <% end %>
-        <title>FOSDEM<% if @item[:title] %> - <%= @item[:title] %><% end %></title>
+        <title><%= conference()[:title] %><% if @item[:title] %> - <%= @item[:title] %><% end %></title>
 	</head>
 	<body>
 		<div class="navbar navbar-fixed-top">
@@ -39,7 +39,7 @@
 				<div class="span3">
 					<ul class="well sidebar-nav">
                         <ul class="nav nav-list">
-                            <%= @item.identifier =~ %r{^/schedule/} ? $schedule_navigation_item.compiled_content : navigation(@item_rep.path) %>
+                            <%= @item.identifier =~ %r{^/schedule/[^/]+/.+} ? $schedule_navigation_item.compiled_content : navigation(@item.path) %>
 						</ul>
                     </ul>
                     <ul class="well">
