--- a/layouts/fullpage.html
+++ b/layouts/fullpage.html
@@ -1,36 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="en">
-	<head>
+    <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="generator" content="nanoc">
-		<meta http-equiv="content-type" content="text/html;charset=utf-8">
-        <link type="text/css" rel="stylesheet" media="screen" href="<%= relpath(@item_rep.path, locate_item_by_identifier('/assets/style/fosdem/')) %>"/>
-        <link href="<%= relpath(@item_rep.path, locate_item_by_identifier('/atom/')) %>" type="application/atom+xml" rel="alternate" title="FOSDEM ATOM Feed"/>
-		<title>FOSDEM - <%= @item[:title] %></title>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link type="text/css" rel="stylesheet" media="screen" href="<%= $item_by_id['/assets/style/fosdem/'].path %>"/>
+        <link href="<%= $item_by_id['/atom/'].path %>" type="application/atom+xml" rel="alternate" title="FOSDEM ATOM Feed"/>
+        <% (@item[:alternative_representations] or []).each do |alt| %>
+        <link type="<%= alt[:mime] %>" rel="alternate" title="<%= alt[:title] %>" href="<%= $item_by_id[alt[:item]].path %>" />
+        <% end %>
+        <title>FOSDEM<% if @item[:title] %> - <%= @item[:title] %><% end %></title>
 	</head>
-	<body>
-		<div class="navbar navbar-fixed-top">
-			<div class="navbar-inner">
-				<div class="container-fluid">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-					<a class="brand" href="#">FOSDEM</a>
-					<div class="nav-collapse">
-                        <ul class="nav">
-							<li class="active"><a href="/">Home</a></li>
-							<li><a href="/about/">About</a></li>
-							<li><a href="/schedule/">Schedule</a></li>
-						</ul>
-					</div>
-				</div>
-			</div> <!-- navbar-inner -->
-		</div> <!-- navbar -->
-
+	<body class="fullpage">
+        <!-- content/ -->
         <%= yield %>
-
+        <!-- /content -->
 	</body>
 </html>
