add prefix (/2013/) support + fix rooms page + fix active highlight in navigation + disable path relativization filter again (faster)

--- a/content/assets/style/parts/site.css
+++ b/content/assets/style/parts/site.css
@@ -35,3 +35,6 @@ ul.horizontal-list li:before {
 ul.horizontal-list li:first-child:before {
   content: none;
 }
+.sidebar-nav {
+  margin-left: 0 !important;
+}
