--- a/content/schedule_navigation.erb
+++ b/content/schedule_navigation.erb
@@ -2,4 +2,4 @@
 kind: internal
 layout: false
 ---
-<%= navigation(current_path='/schedule/') %>
+<%= navigation(current_path="#{$prefix}/schedule/") %>
