add contact, promote, flyers, badges for 2013 + use img() instead of image_size filter, needs some fixing

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -72,7 +72,7 @@
                 <li>
                 <div class="btn-group">
                   <a href="<%= pathof '/support/donate/' %>" class="btn btn-primary">Donate</a>
-                  <a href="#" class="btn btn-success">Promote</a>
+                  <a href="<%= pathof '/support/promote/' %>" class="btn btn-success">Promote</a>
                 </div>
                 </li>
                 <%= $sponsors_navigation_item.compiled_content %>
@@ -102,7 +102,7 @@
                 <li>
                 <div class="btn-group">
                   <a href="<%= pathof '/support/donate/' %>" class="btn btn-primary">Donate</a>
-                  <a href="#" class="btn btn-success">Promote</a>
+                  <a href="<%= pathof '/support/promote/' %>" class="btn btn-success">Promote</a>
                 </div>
                 </li>
                 <%= $sponsors_navigation_item.compiled_content %>
