- add CSS for image height and width to avoid having chromium scale the images (unproperly) - rewrite sponsors page to use divs and a floating image rather than a table - refactor helpers

--- a/content/assets/style/parts/site.css
+++ b/content/assets/style/parts/site.css
@@ -38,3 +38,13 @@ ul.horizontal-list li:first-child:before {
 .sidebar-nav {
   margin-left: 0 !important;
 }
+img.sponsor-logo {
+  float: right;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+}
+div.sponsor-block {
+  margin-bottom: 2em;
+  padding-bottom: 2em;
+  border-bottom: 1px dashed #ccc;
+}
